consumo api final

--- a/defi new/defi/src/app/app.html
+++ b/defi new/defi/src/app/app.html
@@ -1,4 +1,4 @@
-<header class="header"><h1>DeFi</h1></header>
+<header class="header"><h1>Platzi Fake</h1></header>
 
 <main class="main">
   <app-divisa-table></app-divisa-table>
@@ -6,7 +6,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2024 Cotizaciones DeFi</p>
+  <p>&copy; 2025 platzi fake</p>
 </footer>
 
 <router-outlet />
